--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script src="linked-lists.js"></script>
 	<script src="dictionaries.js"></script>
 	<script src="hash-tables.js"></script>
-	<script src="binary-trees.js"></script>
+	<script src="binary-tree.js"></script>
 	<script src="graphs.js"></script>
 
 
