--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="dictionaries.js"></script>
 	<script src="hash-tables.js"></script>
 	<script src="binary-tree.js"></script>
-	<script src="graphs.js"></script>
+	<script src="graph.js"></script>
 
 
 	<script>
