--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="queue.js"></script>
 	<script src="linked-lists.js"></script>
 	<script src="dictionaries.js"></script>
-	<script src="hash-tables.js"></script>
+	<script src="hash-table.js"></script>
 	<script src="binary-tree.js"></script>
 	<script src="graph.js"></script>
 
