--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="lists.js"></script>
 	<script src="stacks.js"></script>
 	<script src="queue.js"></script>
-	<script src="linked-lists.js"></script>
+	<script src="linked-list.js"></script>
 	<script src="dictionaries.js"></script>
 	<script src="hash-table.js"></script>
 	<script src="binary-tree.js"></script>
@@ -39,7 +39,6 @@
 			queue.enqueue('el3');
 			console.log(queue);
 
-			
 			// Linked lists
 			let ll = new LinkedList();
 			ll.insert('el1', 'head');
