--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<script src="lists.js"></script>
+	<script src="list.js"></script>
 	<script src="stacks.js"></script>
 	<script src="queue.js"></script>
 	<script src="linked-list.js"></script>
