--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			queue.enqueue('el1');
 			queue.enqueue('el2');
 			queue.enqueue('el3');
+			queue.front();
 			console.log(queue);
 
 			// Linked lists
