--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 	<script src="list.js"></script>
-	<script src="stacks.js"></script>
+	<script src="stack.js"></script>
 	<script src="queue.js"></script>
 	<script src="linked-list.js"></script>
 	<script src="dictionaries.js"></script>
@@ -30,6 +30,7 @@
 			stack.push('el1');
 			stack.push('el2');
 			stack.push('el3');
+			stack.pop();
 			console.log(stack);
 			
 			// Queues
@@ -37,7 +38,6 @@
 			queue.enqueue('el1');
 			queue.enqueue('el2');
 			queue.enqueue('el3');
-			queue.front();
 			console.log(queue);
 
 			// Linked lists
